--- a/config/gpu_configs/gpu_aquaplanet_chap.yml
+++ b/config/gpu_configs/gpu_aquaplanet_chap.yml
@@ -1,8 +1,18 @@
-dt_save_state_to_disk: "3hours"
+job_id: gpu_aquaplanet_chap
+dt_save_state_to_disk: "Inf"
 dt_save_to_sol: "Inf"
-job_id: gpu_diagnostic_edmfx_aquaplanet
+output_default_diagnostics: false
+h_elem: 16
+z_max: 55000.0
+z_elem: 63
+dz_bottom: 30.0
+dz_top: 3000.0
+moist: equil 
 surface_setup: DefaultMoninObukhov 
-rad: clearsky
+rad: allskywithclear
+idealized_insolation: false
+dt_rad: 1hours
+dt_cloud_fraction: 1hours
 turbconv: diagnostic_edmfx 
 implicit_diffusion: true
 approximate_linear_solve_iters: 2
@@ -13,8 +23,7 @@ edmfx_detr_model: "Generalized"
 edmfx_nh_pressure: true 
 edmfx_sgs_mass_flux: true
 edmfx_sgs_diffusive_flux: true
-moist: equil 
 precip_model: 0M
 dt: 100secs 
-t_end: 6hours 
+t_end: 1days 
 toml: [toml/diagnostic_edmfx_box.toml]
